fixed article title & publication date spacing

--- a/lab5/src/components/Articles.css
+++ b/lab5/src/components/Articles.css
@@ -1,7 +1,36 @@
 .news-container {
   margin-top: 90px;
+  /* margin-bottom: 25px; */
+  /* height: auto; */
 }
 
 .news {
   background-color: aliceblue;
+  margin-bottom: 25px;
+  height: auto;
+}
+
+.title {
+  margin-top: 25px;
+}
+
+.titleDiv {
+  display: flex;
+  margin-left: 15px;
+  color: black;
+}
+
+.publication-date {
+  font-weight: normal;
+  font-size: 12px;
+  color: dimgray;
+  margin-top: 22px;
+  margin-left: auto;
+  white-space: nowrap;
+  margin-right: 10px;
+
+}
+
+.articleContent {
+  margin-top: 25px;
 }
